; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_uncompress-rar.c_rar_decode_ppmd7_symbol.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/unarr/rar/extr_uncompress-rar.c_rar_decode_ppmd7_symbol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ar_archive_rar_uncomp_v3 = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"Invalid data in bitstream\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ar_archive_rar_uncomp_v3*, i64*)* @rar_decode_ppmd7_symbol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rar_decode_ppmd7_symbol(%struct.ar_archive_rar_uncomp_v3* %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ar_archive_rar_uncomp_v3*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  store %struct.ar_archive_rar_uncomp_v3* %0, %struct.ar_archive_rar_uncomp_v3** %4, align 8
  store i64* %1, i64** %5, align 8
  %7 = load %struct.ar_archive_rar_uncomp_v3*, %struct.ar_archive_rar_uncomp_v3** %4, align 8
  %8 = getelementptr inbounds %struct.ar_archive_rar_uncomp_v3, %struct.ar_archive_rar_uncomp_v3* %7, i32 0, i32 1
  %9 = load %struct.ar_archive_rar_uncomp_v3*, %struct.ar_archive_rar_uncomp_v3** %4, align 8
  %10 = getelementptr inbounds %struct.ar_archive_rar_uncomp_v3, %struct.ar_archive_rar_uncomp_v3* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = call i32 @Ppmd7_DecodeSymbol(i32* %8, i32* %11)
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %6, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = call i32 @warn(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %21

17:                                               ; preds = %2
  %18 = load i32, i32* %6, align 4
  %19 = sext i32 %18 to i64
  %20 = load i64*, i64** %5, align 8
  store i64 %19, i64* %20, align 8
  store i32 1, i32* %3, align 4
  br label %21

21:                                               ; preds = %17, %15
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @Ppmd7_DecodeSymbol(i32*, i32*) #1

declare dso_local i32 @warn(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
